--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseURL = "https://yuyaichimura.com/"
+#baseURL = "http://localhost"
 languageCode = "en-us"
 title = "Yuya Ichimura"
 theme = "pulp"
